@@ -1,6 +1,5 @@
 package com.example.just.Service;
 
-import com.example.just.Dto.FCMMessageDto;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.auth.oauth2.GoogleCredentials;
@@ -8,19 +7,11 @@ import com.google.firebase.messaging.FirebaseMessaging;
 import com.google.firebase.messaging.FirebaseMessagingException;
 import com.google.firebase.messaging.Message;
 import com.google.firebase.messaging.Notification;
-import java.io.File;
-import java.io.FileInputStream;
 import java.io.IOException;
-import java.util.Arrays;
-import okhttp3.MediaType;
-import okhttp3.OkHttpClient;
-import okhttp3.Request;
-import okhttp3.RequestBody;
-import okhttp3.Response;
+import java.util.List;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.ClassPathResource;
-import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
@@ -40,7 +31,7 @@ public class FcmService {
     private String getAccessToken() throws IOException{
         GoogleCredentials googleCredentials = GoogleCredentials
                 .fromStream(new ClassPathResource("key/just-firebase-key.json").getInputStream())
-                .createScoped(Arrays.asList("https://www.googleapi.com/auth/cloud-platform"));
+                .createScoped(List.of("https://www.googleapi.com/auth/cloud-platform"));
         System.out.println(googleCredentials.getQuotaProjectId());
         System.out.println(googleCredentials);
         System.out.println(googleCredentials.getAuthenticationType());
@@ -50,49 +41,18 @@ public class FcmService {
     }
 
     //fcm형태로 가공
-    public String makeMessage(String targetToken, String title, String body,
-                              String name, String description) throws JsonProcessingException {
-        FCMMessageDto fcmMessage = FCMMessageDto.builder()
-                .message(
-                        FCMMessageDto.FCMMessage.builder()
-                                .token(targetToken)
-                                .notification(
-                                        FCMMessageDto.Notification.builder()
-                                                .title(title)
-                                                .body(body)
-                                                .build()
-                                )
-                                .data(
-                                        FCMMessageDto.Data.builder()
-                                                .name(name)
-                                                .description(description)
-                                                .build()
-                                )
-                                .build()
-                )
-                .validateOnly(false)
-                .build();
+//    public String makeMessage(final String targetToken, final Notification notification) throws JsonProcessingException {
+//        final Long senderId = notification.ge
+//    }
 
-        return objectMapper.writeValueAsString(fcmMessage);
-    }
-
-    public ResponseEntity sendMessageTo(String targetToken, String title, String body, String id, String isEnd)
-            throws IOException {
-        String message = makeMessage(targetToken,title,body,id,isEnd);
-
-        OkHttpClient client = new OkHttpClient();
-        RequestBody requestBody = RequestBody.create(message, MediaType.get("application/json; charset=utf-8"));
-
-        Request request = new Request.Builder()
-                .url(FIREBASE_URL)
-                .post(requestBody)
-                .addHeader(HttpHeaders.AUTHORIZATION,"Bearer "+getAccessToken())
-                .addHeader(HttpHeaders.CONTENT_TYPE,"application/json; UTF-8")
-                .build();
-
-        Response response = client.newCall(request).execute();
-        System.out.println(response.body().string());
-        return new ResponseEntity(response, HttpStatus.OK);
+    public void sendMessageByToken(String title,String body, String token) throws FirebaseMessagingException{
+        FirebaseMessaging.getInstance().send(Message.builder()
+                .setNotification(Notification.builder()
+                        .setTitle(title)
+                        .setBody(body)
+                        .build())
+                .setToken(token)
+                .build());
     }
 
     public ResponseEntity testMessage(String token) throws FirebaseMessagingException {
